fix: add MAVEN_OPTS for protoc maven compile